[package]
name = "chip8"
description = "A CHIP-8 emulator."
authors = ["vzwGrey <vzwgrey@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/vzwGrey/chip-8"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eyre = "0.6.6"
clap = { version = "3.0.14", features = ["derive"] }
minifb = "0.20.0"
rand = "0.8.5"
